--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ img {
   width: 150px;
   height: 150px;
   border-radius: 100%;
+  border: 0;
 }
 
 input {
@@ -15,10 +16,42 @@ input {
   margin-top: 1rem;
   padding: 0.6rem;
   border-radius: 1rem;
-  border-color: #8d5acd;
+  border: 1px solid gray;
+}
+.accordion {
+  display: none;
 }
 
-.personalinformation {
+.accordion-item {
+  margin-top: 1rem;
+}
+
+.accordion-button:not(.collapsed) {
   background-color: white;
-  padding: 1rem;
+  color: #333333;
+}
+.accordion-button:not(.collapsed)::after {
+  background-image: url(img/dash.svg);
+}
+.accordion-button::after {
+  background-image: url(img/plus-lg.svg);
+}
+
+.cv-ekran {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+.cv-ekran .cv-content {
+  width: 100%;
+  height: 90vh;
+  background-color: white;
+  border-radius: 0.6rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border: 1px solid rgb(204, 204, 204);
+}
+
+.cv-pdf-content {
+  display: none;
 }/*# sourceMappingURL=style.css.map */
