--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@ img{
     width: 150px;
     height: 150px;
     border-radius: 100%;
+    border: 0;
 }
 
 input{
@@ -15,10 +16,52 @@ input{
     margin-top: 1rem;
     padding: .6rem;
     border-radius: 1rem;
-    border-color: #8d5acd;
+    border:1px solid gray;
+    &:focus-visible{
+        
+    }
 }
 
-.personalinformation{
-    background-color: white;
-    padding: 1rem;
+.accordion{
+    display: none;
+}
+.accordion-item{
+    margin-top: 1rem;
+}
+
+.accordion-button{
+    &:not(.collapsed){
+        background-color: white;
+        color: #333333;
+        &::after{
+            background-image: url(img/dash.svg);
+        }
+    }
+    &::after{
+        background-image: url(img/plus-lg.svg);
+    }
+}
+
+.cv-ekran{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    .cv-content{
+        width: 100%;
+        height: 90vh;
+        background-color: white;
+        border-radius: .6rem;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        border:1px solid rgb(204, 204, 204)
+    }
+}
+
+
+.hgmesaji{
+   
+}
+
+.cv-pdf-content{
+    display: none;
 }
