--- a/style.css
+++ b/style.css
@@ -18,10 +18,6 @@ input {
   border-radius: 1rem;
   border: 1px solid gray;
 }
-.accordion {
-  display: none;
-}
-
 .accordion-item {
   margin-top: 1rem;
 }
@@ -37,21 +33,8 @@ input {
   background-image: url(img/plus-lg.svg);
 }
 
-.cv-ekran {
+.cv-pdf-content .cv-pdf-cont {
   width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-}
-.cv-ekran .cv-content {
-  width: 100%;
-  height: 90vh;
+  height: 80vh;
   background-color: white;
-  border-radius: 0.6rem;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  border: 1px solid rgb(204, 204, 204);
-}
-
-.cv-pdf-content {
-  display: none;
 }/*# sourceMappingURL=style.css.map */
