--- a/style.scss
+++ b/style.scss
@@ -22,9 +22,6 @@ input{
     }
 }
 
-.accordion{
-    display: none;
-}
 .accordion-item{
     margin-top: 1rem;
 }
@@ -42,26 +39,10 @@ input{
     }
 }
 
-.cv-ekran{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    .cv-content{
-        width: 100%;
-        height: 90vh;
-        background-color: white;
-        border-radius: .6rem;
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-        border:1px solid rgb(204, 204, 204)
-    }
-}
-
-
-.hgmesaji{
-   
-}
-
 .cv-pdf-content{
-    display: none;
+    .cv-pdf-cont{
+        width: 100%;
+        height: 80vh;
+        background-color: white;
+    }
 }
